--- a/data/Team-13/Code/Exploring_Dataset.ipynb
+++ b/data/Team-13/Code/Exploring_Dataset.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -68,17 +68,17 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>CustomerID</th>\n",
+       "      <th>Customer ID</th>\n",
        "      <th>Gender</th>\n",
        "      <th>Age</th>\n",
        "      <th>City</th>\n",
-       "      <th>MembershipType</th>\n",
-       "      <th>TotalSpend</th>\n",
-       "      <th>ItemsPurchased</th>\n",
-       "      <th>AverageRating</th>\n",
-       "      <th>DiscountApplied</th>\n",
-       "      <th>DaysSinceLastPurchase</th>\n",
-       "      <th>SatisfactionLevel</th>\n",
+       "      <th>Membership Type</th>\n",
+       "      <th>Total Spend</th>\n",
+       "      <th>Items Purchased</th>\n",
+       "      <th>Average Rating</th>\n",
+       "      <th>Discount Applied</th>\n",
+       "      <th>Days Since Last Purchase</th>\n",
+       "      <th>Satisfaction Level</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -242,55 +242,201 @@
        "</div>"
       ],
       "text/plain": [
-       "     CustomerID  Gender  Age           City MembershipType  TotalSpend  \\\n",
-       "0           101  Female   29       New York           Gold     1120.20   \n",
-       "1           102    Male   34    Los Angeles         Silver      780.50   \n",
-       "2           103  Female   43        Chicago         Bronze      510.75   \n",
-       "3           104    Male   30  San Francisco           Gold     1480.30   \n",
-       "4           105    Male   27          Miami         Silver      720.40   \n",
-       "..          ...     ...  ...            ...            ...         ...   \n",
-       "345         446    Male   32          Miami         Silver      660.30   \n",
-       "346         447  Female   36        Houston         Bronze      470.50   \n",
-       "347         448  Female   30       New York           Gold     1190.80   \n",
-       "348         449    Male   34    Los Angeles         Silver      780.20   \n",
-       "349         450  Female   43        Chicago         Bronze      515.75   \n",
+       "     Customer ID  Gender  Age           City Membership Type  Total Spend  \\\n",
+       "0            101  Female   29       New York            Gold      1120.20   \n",
+       "1            102    Male   34    Los Angeles          Silver       780.50   \n",
+       "2            103  Female   43        Chicago          Bronze       510.75   \n",
+       "3            104    Male   30  San Francisco            Gold      1480.30   \n",
+       "4            105    Male   27          Miami          Silver       720.40   \n",
+       "..           ...     ...  ...            ...             ...          ...   \n",
+       "345          446    Male   32          Miami          Silver       660.30   \n",
+       "346          447  Female   36        Houston          Bronze       470.50   \n",
+       "347          448  Female   30       New York            Gold      1190.80   \n",
+       "348          449    Male   34    Los Angeles          Silver       780.20   \n",
+       "349          450  Female   43        Chicago          Bronze       515.75   \n",
        "\n",
-       "     ItemsPurchased  AverageRating DiscountApplied  DaysSinceLastPurchase  \\\n",
-       "0                14            4.6            TRUE                     25   \n",
-       "1                11            4.1           FALSE                     18   \n",
-       "2                 9            3.4            TRUE                     42   \n",
-       "3                19            4.7           FALSE                     12   \n",
-       "4                13            4.0            TRUE                     55   \n",
-       "..              ...            ...             ...                    ...   \n",
-       "345              10            3.8            TRUE                     42   \n",
-       "346               8            3.0           FALSE                     27   \n",
-       "347              16            4.5            TRUE                     28   \n",
-       "348              11            4.2           FALSE                     21   \n",
-       "349              10            3.3            TRUE                     49   \n",
+       "     Items Purchased  Average Rating Discount Applied  \\\n",
+       "0                 14             4.6             TRUE   \n",
+       "1                 11             4.1            FALSE   \n",
+       "2                  9             3.4             TRUE   \n",
+       "3                 19             4.7            FALSE   \n",
+       "4                 13             4.0             TRUE   \n",
+       "..               ...             ...              ...   \n",
+       "345               10             3.8             TRUE   \n",
+       "346                8             3.0            FALSE   \n",
+       "347               16             4.5             TRUE   \n",
+       "348               11             4.2            FALSE   \n",
+       "349               10             3.3             TRUE   \n",
        "\n",
-       "    SatisfactionLevel  \n",
-       "0           Satisfied  \n",
-       "1             Neutral  \n",
-       "2         Unsatisfied  \n",
-       "3           Satisfied  \n",
-       "4         Unsatisfied  \n",
-       "..                ...  \n",
-       "345       Unsatisfied  \n",
-       "346           Neutral  \n",
-       "347         Satisfied  \n",
-       "348           Neutral  \n",
-       "349       Unsatisfied  \n",
+       "     Days Since Last Purchase Satisfaction Level  \n",
+       "0                          25          Satisfied  \n",
+       "1                          18            Neutral  \n",
+       "2                          42        Unsatisfied  \n",
+       "3                          12          Satisfied  \n",
+       "4                          55        Unsatisfied  \n",
+       "..                        ...                ...  \n",
+       "345                        42        Unsatisfied  \n",
+       "346                        27            Neutral  \n",
+       "347                        28          Satisfied  \n",
+       "348                        21            Neutral  \n",
+       "349                        49        Unsatisfied  \n",
        "\n",
        "[350 rows x 11 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Customer ID</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Membership Type</th>\n",
+       "      <th>Total Spend</th>\n",
+       "      <th>Items Purchased</th>\n",
+       "      <th>Average Rating</th>\n",
+       "      <th>Discount Applied</th>\n",
+       "      <th>Days Since Last Purchase</th>\n",
+       "      <th>Satisfaction Level</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>101</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>29</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>Gold</td>\n",
+       "      <td>1120.20</td>\n",
+       "      <td>14</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>TRUE</td>\n",
+       "      <td>25</td>\n",
+       "      <td>Satisfied</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>102</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>34</td>\n",
+       "      <td>Los Angeles</td>\n",
+       "      <td>Silver</td>\n",
+       "      <td>780.50</td>\n",
+       "      <td>11</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>FALSE</td>\n",
+       "      <td>18</td>\n",
+       "      <td>Neutral</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>103</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>43</td>\n",
+       "      <td>Chicago</td>\n",
+       "      <td>Bronze</td>\n",
+       "      <td>510.75</td>\n",
+       "      <td>9</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>TRUE</td>\n",
+       "      <td>42</td>\n",
+       "      <td>Unsatisfied</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>104</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>30</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>Gold</td>\n",
+       "      <td>1480.30</td>\n",
+       "      <td>19</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>FALSE</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Satisfied</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>105</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>27</td>\n",
+       "      <td>Miami</td>\n",
+       "      <td>Silver</td>\n",
+       "      <td>720.40</td>\n",
+       "      <td>13</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>TRUE</td>\n",
+       "      <td>55</td>\n",
+       "      <td>Unsatisfied</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Customer ID  Gender  Age           City Membership Type  Total Spend  \\\n",
+       "0          101  Female   29       New York            Gold      1120.20   \n",
+       "1          102    Male   34    Los Angeles          Silver       780.50   \n",
+       "2          103  Female   43        Chicago          Bronze       510.75   \n",
+       "3          104    Male   30  San Francisco            Gold      1480.30   \n",
+       "4          105    Male   27          Miami          Silver       720.40   \n",
+       "\n",
+       "   Items Purchased  Average Rating Discount Applied  Days Since Last Purchase  \\\n",
+       "0               14             4.6             TRUE                        25   \n",
+       "1               11             4.1            FALSE                        18   \n",
+       "2                9             3.4             TRUE                        42   \n",
+       "3               19             4.7            FALSE                        12   \n",
+       "4               13             4.0             TRUE                        55   \n",
+       "\n",
+       "  Satisfaction Level  \n",
+       "0          Satisfied  \n",
+       "1            Neutral  \n",
+       "2        Unsatisfied  \n",
+       "3          Satisfied  \n",
+       "4        Unsatisfied  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
    ]
   },
   {
@@ -467,6 +613,26 @@
    ],
    "source": [
     "df.info()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.duplicated().sum()"
    ]
   },
   {
@@ -811,7 +977,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
